docs(application-provider-test): export two seperate context providers and cards (#370)
Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

--- a/workspaces/global-floating-action-button/plugins/application-provider-test/app-config.dynamic.yaml
+++ b/workspaces/global-floating-action-button/plugins/application-provider-test/app-config.dynamic.yaml
@@ -1,10 +1,13 @@
-# test global-header components. this isn't implemented yet!
 dynamicPlugins:
   frontend:
     red-hat-developer-hub.backstage-plugin-application-provider-test:
       dynamicRoutes:
-        - path: /countpage
-          importName: CountPage
+        - path: /application-provider-test-page
+          importName: TestPage
       mountPoints:
         - mountPoint: application/provider
-          importName: CountProvider
+          importName: CrashProvider
+        - mountPoint: application/provider
+          importName: TestProviderOne
+        - mountPoint: application/provider
+          importName: TestProviderTwo
