--- a/workspaces/bulk-import/plugins/bulk-import-backend/package.json
+++ b/workspaces/bulk-import/plugins/bulk-import-backend/package.json
@@ -43,13 +43,13 @@
     "openapi": "./scripts/openapi.sh"
   },
   "dependencies": {
-    "@backstage/backend-defaults": "^0.5.2",
-    "@backstage/backend-plugin-api": "^1.0.1",
-    "@backstage/errors": "^1.2.4",
-    "@backstage/integration": "^1.15.1",
-    "@backstage/plugin-catalog-node": "^1.13.1",
-    "@backstage/plugin-permission-common": "^0.8.1",
-    "@backstage/plugin-permission-node": "^0.8.4",
+    "@backstage/backend-defaults": "^0.7.0",
+    "@backstage/backend-plugin-api": "^1.1.1",
+    "@backstage/errors": "^1.2.7",
+    "@backstage/integration": "^1.16.1",
+    "@backstage/plugin-catalog-node": "^1.15.1",
+    "@backstage/plugin-permission-common": "^0.8.4",
+    "@backstage/plugin-permission-node": "^0.8.7",
     "@octokit/auth-app": "^6.0.3",
     "@octokit/rest": "^20.0.2",
     "@red-hat-developer-hub/backstage-plugin-bulk-import-common": "workspace:^",
@@ -62,12 +62,12 @@
     "openapi-backend": "^5.10.6"
   },
   "devDependencies": {
-    "@backstage/backend-test-utils": "1.0.2",
-    "@backstage/catalog-client": "1.7.1",
-    "@backstage/catalog-model": "1.7.0",
-    "@backstage/cli": "0.28.2",
-    "@backstage/config": "1.2.0",
-    "@backstage/plugin-catalog-backend": "1.27.1",
+    "@backstage/backend-test-utils": "^1.2.1",
+    "@backstage/catalog-client": "^1.9.1",
+    "@backstage/catalog-model": "^1.7.3",
+    "@backstage/cli": "^0.29.5",
+    "@backstage/config": "^1.3.2",
+    "@backstage/plugin-catalog-backend": "^1.30.0",
     "@janus-idp/backstage-plugin-audit-log-node": "^1.7.1",
     "@openapitools/openapi-generator-cli": "2.16.3",
     "@spotify/prettier-config": "^15.0.0",
