--- a/workspaces/bulk-import/plugins/bulk-import-common/package.json
+++ b/workspaces/bulk-import/plugins/bulk-import-common/package.json
@@ -36,13 +36,13 @@
     "prettier:fix": "prettier --ignore-unknown --write ."
   },
   "devDependencies": {
-    "@backstage/cli": "0.28.2",
-    "@backstage/plugin-permission-common": "^0.8.1",
+    "@backstage/cli": "^0.29.5",
+    "@backstage/plugin-permission-common": "^0.8.4",
     "@spotify/prettier-config": "^15.0.0",
     "prettier": "3.4.2"
   },
   "peerDependencies": {
-    "@backstage/plugin-permission-common": "^0.8.1"
+    "@backstage/plugin-permission-common": "^0.8.4"
   },
   "files": [
     "dist"
