feat(marketplace): add package entity relationship with plugin entity (#391)
* add package entity relationship with plugin entity

* add api report

--- a/workspaces/marketplace/app-config.yaml
+++ b/workspaces/marketplace/app-config.yaml
@@ -76,7 +76,17 @@ catalog:
     entityFilename: catalog-info.yaml
     pullRequestBranchName: backstage-integration
   rules:
-    - allow: [Component, System, API, Resource, Plugin, PluginList, Location]
+    - allow:
+        [
+          Component,
+          System,
+          API,
+          Resource,
+          Plugin,
+          PluginList,
+          Package,
+          Location,
+        ]
   locations:
     # Local example data, file locations are relative to the backend process, typically `packages/backend`
     - type: file
@@ -91,6 +101,10 @@ catalog:
       target: ../../examples/all-pluginlists.yaml
       rules:
         - allow: [PluginList]
+    - type: file
+      target: ../../examples/all-packages.yaml
+      rules:
+        - allow: [Package]
 
     - type: file
       target: ../../examples/catalog-demo.yaml
