--- a/workspaces/global-header/plugins/global-header/app-config.dynamic.yaml
+++ b/workspaces/global-header/plugins/global-header/app-config.dynamic.yaml
@@ -7,56 +7,58 @@ dynamicPlugins:
           importName: GlobalHeader
           config:
             position: above-main-content # above-main-content | below-main-content
+
         - mountPoint: global.header/component
           importName: SearchComponent
           config:
-            type: search
             priority: 100
+
         - mountPoint: global.header/component
-          importName: CreateDropdown
+          importName: Spacer
           config:
-            type: dropdown_button
+            priority: 99
+            props:
+              growFactor: 0
+
+        - mountPoint: global.header/component
+          importName: HeaderIconButton
+          config:
             priority: 90
-        - mountPoint: global.header/create
-          importName: SoftwareTemplatesSection
-          config:
-            type: list
-            priority: 10
-        - mountPoint: global.header/create
-          importName: RegisterAComponentSection
-          config:
-            type: link
+            props:
+              title: Create...
+              icon: add
+              to: create
+
         - mountPoint: global.header/component
-          importName: HeaderIconButton
+          importName: SupportButton
           config:
-            type: icon_button
             priority: 80
-            props:
-              icon: support
-              tooltip: 'Support'
+
         - mountPoint: global.header/component
-          importName: HeaderIconButton
+          importName: NotificationButton
           config:
-            type: icon_button
             priority: 70
-            props:
-              icon: notifications
-              tooltip: 'Notifications'
+
+        - mountPoint: global.header/component
+          importName: Divider
+          config:
+            priority: 50
+
         - mountPoint: global.header/component
           importName: ProfileDropdown
           config:
-            type: dropdown_button
-            priority: 0
+            priority: 10
+
         - mountPoint: global.header/profile
           importName: MenuItemLink
           config:
-            type: link
-            priority: 200
+            priority: 100
             props:
               title: Settings
               link: /settings
               icon: manageAccounts
+
         - mountPoint: global.header/profile
           importName: LogoutButton
           config:
-            priority: 100
+            priority: 10
