--- a/workspaces/homepage/plugins/dynamic-home-page/package.json
+++ b/workspaces/homepage/plugins/dynamic-home-page/package.json
@@ -57,7 +57,7 @@
     "@backstage/plugin-catalog": "^1.27.0",
     "@backstage/test-utils": "^1.7.5",
     "@openshift/dynamic-plugin-sdk": "5.0.1",
-    "@redhat-developer/red-hat-developer-hub-theme": "0.5.1",
+    "@red-hat-developer-hub/backstage-plugin-theme": "^0.6.0",
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "14.3.1",
     "@testing-library/user-event": "14.5.2",
