--- a/workspaces/marketplace/plugins/marketplace-common/package.json
+++ b/workspaces/marketplace/plugins/marketplace-common/package.json
@@ -38,7 +38,8 @@
     "@backstage/backend-plugin-api": "^1.2.0",
     "@backstage/catalog-client": "^1.9.1",
     "@backstage/catalog-model": "^1.7.3",
-    "@backstage/errors": "^1.2.7"
+    "@backstage/errors": "^1.2.7",
+    "@backstage/plugin-permission-common": "^0.8.4"
   },
   "devDependencies": {
     "@backstage/backend-test-utils": "^1.3.0",
