--- a/workspaces/marketplace/plugins/marketplace/package.json
+++ b/workspaces/marketplace/plugins/marketplace/package.json
@@ -38,11 +38,13 @@
     "@backstage/core-components": "^0.16.4",
     "@backstage/core-plugin-api": "^1.10.4",
     "@backstage/plugin-catalog-react": "^1.15.2",
+    "@backstage/plugin-permission-react": "^0.4.31",
     "@backstage/theme": "^0.6.4",
     "@backstage/types": "^1.2.1",
     "@monaco-editor/react": "^4.7.0",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.12.2",
+    "@mui/styles": "5.16.14",
     "@red-hat-developer-hub/backstage-plugin-marketplace-common": "workspace:^",
     "@scalprum/react-core": "0.9.3",
     "@tanstack/react-query": "^5.60.5",
@@ -63,7 +65,6 @@
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.0.0",
-    "msw": "^1.0.0",
     "react": "^17.0.0 || ^18.0.0",
     "react-router-dom": "^6.3.0"
   },
