--- a/workspaces/orchestrator/packages/backend/package.json
+++ b/workspaces/orchestrator/packages/backend/package.json
@@ -22,34 +22,34 @@
   },
   "dependencies": {
     "@backstage-community/plugin-rbac-backend": "^5.2.6",
-    "@backstage/backend-defaults": "^0.8.2",
+    "@backstage/backend-defaults": "^0.10.0",
     "@backstage/config": "^1.3.2",
-    "@backstage/plugin-app-backend": "^0.5.0",
-    "@backstage/plugin-auth-backend": "^0.24.4",
-    "@backstage/plugin-auth-backend-module-github-provider": "^0.3.1",
-    "@backstage/plugin-auth-backend-module-gitlab-provider": "^0.3.2",
-    "@backstage/plugin-auth-backend-module-guest-provider": "^0.2.6",
-    "@backstage/plugin-auth-node": "^0.6.1",
-    "@backstage/plugin-catalog-backend": "^1.32.0",
-    "@backstage/plugin-catalog-backend-module-gitlab": "^0.6.4",
-    "@backstage/plugin-catalog-backend-module-logs": "^0.1.8",
-    "@backstage/plugin-catalog-backend-module-scaffolder-entity-model": "^0.2.6",
-    "@backstage/plugin-notifications-backend": "^0.5.4",
-    "@backstage/plugin-permission-backend": "^0.5.55",
-    "@backstage/plugin-permission-backend-module-allow-all-policy": "^0.2.6",
-    "@backstage/plugin-permission-common": "^0.8.4",
-    "@backstage/plugin-permission-node": "^0.9.0",
-    "@backstage/plugin-proxy-backend": "^0.6.0",
-    "@backstage/plugin-scaffolder-backend": "^1.31.0",
-    "@backstage/plugin-scaffolder-backend-module-github": "^0.6.1",
-    "@backstage/plugin-scaffolder-backend-module-gitlab": "^0.8.1",
-    "@backstage/plugin-search-backend": "^2.0.0",
-    "@backstage/plugin-search-backend-module-catalog": "^0.3.2",
-    "@backstage/plugin-search-backend-module-pg": "^0.5.42",
-    "@backstage/plugin-search-backend-module-techdocs": "^0.4.0",
-    "@backstage/plugin-search-backend-node": "^1.3.9",
-    "@backstage/plugin-signals-backend": "^0.3.2",
-    "@backstage/plugin-techdocs-backend": "^2.0.0",
+    "@backstage/plugin-app-backend": "^0.5.2",
+    "@backstage/plugin-auth-backend": "^0.25.0",
+    "@backstage/plugin-auth-backend-module-github-provider": "^0.3.3",
+    "@backstage/plugin-auth-backend-module-gitlab-provider": "^0.3.3",
+    "@backstage/plugin-auth-backend-module-guest-provider": "^0.2.8",
+    "@backstage/plugin-auth-node": "^0.6.3",
+    "@backstage/plugin-catalog-backend": "~2.0.0",
+    "@backstage/plugin-catalog-backend-module-gitlab": "~0.6.6",
+    "@backstage/plugin-catalog-backend-module-logs": "~0.1.10",
+    "@backstage/plugin-catalog-backend-module-scaffolder-entity-model": "~0.2.8",
+    "@backstage/plugin-notifications-backend": "^0.5.6",
+    "@backstage/plugin-permission-backend": "^0.7.0",
+    "@backstage/plugin-permission-backend-module-allow-all-policy": "^0.2.8",
+    "@backstage/plugin-permission-common": "^0.9.0",
+    "@backstage/plugin-permission-node": "^0.10.0",
+    "@backstage/plugin-proxy-backend": "^0.6.2",
+    "@backstage/plugin-scaffolder-backend": "^1.33.0",
+    "@backstage/plugin-scaffolder-backend-module-github": "^0.7.1",
+    "@backstage/plugin-scaffolder-backend-module-gitlab": "^0.9.1",
+    "@backstage/plugin-search-backend": "^2.0.2",
+    "@backstage/plugin-search-backend-module-catalog": "^0.3.4",
+    "@backstage/plugin-search-backend-module-pg": "^0.5.44",
+    "@backstage/plugin-search-backend-module-techdocs": "^0.4.2",
+    "@backstage/plugin-search-backend-node": "^1.3.11",
+    "@backstage/plugin-signals-backend": "^0.3.4",
+    "@backstage/plugin-techdocs-backend": "^2.0.2",
     "@red-hat-developer-hub/backstage-plugin-orchestrator-backend": "workspace:^",
     "@red-hat-developer-hub/backstage-plugin-scaffolder-backend-module-orchestrator": "workspace:^",
     "app": "link:../app",
@@ -60,7 +60,7 @@
     "winston": "^3.2.1"
   },
   "devDependencies": {
-    "@backstage/cli": "^0.31.1",
+    "@backstage/cli": "^0.32.1",
     "@types/express": "^4.17.6",
     "@types/express-serve-static-core": "^4.17.5",
     "@types/luxon": "^2.0.4"
