--- a/workspaces/orchestrator/plugins/custom-authentication-provider-module-backend/package.json
+++ b/workspaces/orchestrator/plugins/custom-authentication-provider-module-backend/package.json
@@ -12,7 +12,7 @@
   },
   "backstage": {
     "role": "backend-plugin",
-    "supported-versions": "1.36.1",
+    "supported-versions": "1.39.1",
     "pluginId": "custom-authentication-provider-module",
     "pluginPackages": [
       "custom-authentication-provider-module",
@@ -44,15 +44,15 @@
     "export-dynamic:clean": "run export-dynamic --clean"
   },
   "dependencies": {
-    "@backstage/backend-defaults": "0.7.0",
-    "@backstage/backend-plugin-api": "1.1.1",
-    "@backstage/plugin-auth-backend": "0.24.2",
-    "@backstage/plugin-auth-backend-module-github-provider": "0.2.4",
-    "@backstage/plugin-auth-node": "0.5.6",
+    "@backstage/backend-defaults": "^0.10.0",
+    "@backstage/backend-plugin-api": "^1.3.1",
+    "@backstage/plugin-auth-backend": "^0.25.0",
+    "@backstage/plugin-auth-backend-module-github-provider": "^0.3.3",
+    "@backstage/plugin-auth-node": "^0.6.3",
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "@backstage/cli": "^0.29.6",
+    "@backstage/cli": "^0.32.1",
     "@backstage/types": "^1.2.1",
     "@janus-idp/cli": "3.6.1",
     "prettier": "3.6.2",
