--- a/workspaces/orchestrator/plugins/custom-authentication-provider-module/package.json
+++ b/workspaces/orchestrator/plugins/custom-authentication-provider-module/package.json
@@ -12,7 +12,7 @@
   },
   "backstage": {
     "role": "frontend-plugin",
-    "supported-versions": "1.36.1",
+    "supported-versions": "1.39.1",
     "pluginId": "custom-authentication-provider-module",
     "pluginPackages": [
       "custom-authentication-provider-module",
@@ -45,16 +45,16 @@
     "export-dynamic:clean": "run export-dynamic --clean"
   },
   "dependencies": {
-    "@backstage/core-app-api": "1.15.4",
-    "@backstage/core-components": "0.16.3",
-    "@backstage/core-plugin-api": "1.10.3",
-    "@backstage/integration-react": "1.2.3",
+    "@backstage/core-app-api": "^1.17.0",
+    "@backstage/core-components": "^0.17.2",
+    "@backstage/core-plugin-api": "^1.10.7",
+    "@backstage/integration-react": "^1.2.7",
     "@mui/material": "^5.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@backstage/cli": "^0.29.6",
+    "@backstage/cli": "^0.32.1",
     "@janus-idp/cli": "3.6.1",
     "@types/react": "^18.0.0",
     "prettier": "3.6.2",
