--- a/workspaces/orchestrator/plugins/orchestrator-form-widgets/package.json
+++ b/workspaces/orchestrator/plugins/orchestrator-form-widgets/package.json
@@ -15,7 +15,7 @@
     "pluginPackages": [
       "@red-hat-developer-hub/backstage-plugin-orchestrator-form-widgets"
     ],
-    "supported-versions": "1.36.1"
+    "supported-versions": "1.39.1"
   },
   "homepage": "https://red.ht/rhdh",
   "repository": {
@@ -51,9 +51,9 @@
     "export-dynamic": "janus-cli package export-dynamic-plugin --in-place"
   },
   "dependencies": {
-    "@backstage/core-components": "^0.17.0",
-    "@backstage/core-plugin-api": "^1.10.1",
-    "@backstage/theme": "^0.6.2",
+    "@backstage/core-components": "^0.17.2",
+    "@backstage/core-plugin-api": "^1.10.7",
+    "@backstage/theme": "^0.6.6",
     "@backstage/types": "^1.2.1",
     "@mui/icons-material": "^5.17.1",
     "@mui/material": "^5.17.1",
@@ -78,10 +78,10 @@
     }
   },
   "devDependencies": {
-    "@backstage/cli": "^0.31.1",
-    "@backstage/core-app-api": "^1.15.2",
-    "@backstage/dev-utils": "^1.1.7-next.3",
-    "@backstage/test-utils": "^1.7.1",
+    "@backstage/cli": "^0.32.1",
+    "@backstage/core-app-api": "^1.17.0",
+    "@backstage/dev-utils": "^1.1.10",
+    "@backstage/test-utils": "^1.7.8",
     "@janus-idp/cli": "3.6.1",
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^14.0.0",
