feat(quickstart): added support to role-based quickstart (#1277)
* feat(quickstart): added support to role-based quickstart

Signed-off-by: Yi Cai <yicai@redhat.com>

* added unit tests

Signed-off-by: Yi Cai <yicai@redhat.com>

* reduced duplications in mockData

Signed-off-by: Yi Cai <yicai@redhat.com>

* reduced duplications in Quickstrt.test

Signed-off-by: Yi Cai <yicai@redhat.com>

---------

Signed-off-by: Yi Cai <yicai@redhat.com>

--- a/workspaces/quickstart/app-config.yaml
+++ b/workspaces/quickstart/app-config.yaml
@@ -4,6 +4,8 @@ app:
   quickstart:
     - title: Set up authentication
       icon: Admin
+      roles:
+        - admin
       description: Set up secure login credentials to protect your account from unauthorized access.
       cta:
         text: Learn more
@@ -26,6 +28,38 @@ app:
       cta:
         text: Explore plugins
         link: /extensions
+    - title: Import application
+      roles:
+        - developer
+      icon: Import
+      description: Import your existing code and services into the catalog to organize and access them through your developer portal.
+      cta:
+        text: Import
+        link: /bulk-import
+    - title: Learn about the Catalog
+      roles:
+        - developer
+      icon: Catalog
+      description: Discover all software components, services, and APIs, and view their owners and documentation.
+      cta:
+        text: View Catalog
+        link: /catalog
+    - title: Explore Self-service templates
+      roles:
+        - developer
+      icon: SelfService
+      description: Use our self-service templates to quickly set up new projects, services, or documentation.
+      cta:
+        text: Explore templates
+        link: /create
+    - title: Find all Learning Paths
+      roles:
+        - developer
+      icon: Learning
+      description: Integrate tailored e-learning into your workflows with Learning Paths to accelerate onboarding, close skill gaps, and promote best practices.
+      cta:
+        text: View Learning Paths
+        link: /docs
 
 organization:
   name: My Company
