--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,7 +92,7 @@ jobs:
 
       - name: prettier
         run: yarn prettier:check
-      
+
       - name: read knip-reports flag from bcp.json
         id: bcp
         run: |
@@ -106,7 +106,7 @@ jobs:
             echo "bcp.json not found. Defaulting knip_reports to false."
             echo "knip_reports=false" >> $GITHUB_OUTPUT
           fi
-          
+
       - name: check knip reports
         if: ${{ steps.bcp.outputs.knip_reports == 'true' }}
         run: yarn build:knip-reports --ci
@@ -124,7 +124,7 @@ jobs:
         run: yarn backstage-cli repo fix --check --publish
 
       - name: test changed packages
-        run: yarn backstage-cli repo test --coverage --maxWorkers=3
+        run: yarn test:all --maxWorkers=3
 
       - name: install playwright
         if: ${{ hashFiles(format('workspaces/{0}/playwright.config.ts', matrix.workspace)) != '' }}
