--- a/workspaces/quickstart/plugins/quickstart/package.json
+++ b/workspaces/quickstart/plugins/quickstart/package.json
@@ -32,13 +32,15 @@
     "postpack": "backstage-cli package postpack"
   },
   "dependencies": {
+    "@backstage-community/plugin-rbac-common": "^1.19.0",
     "@backstage/core-components": "^0.17.4",
     "@backstage/core-plugin-api": "^1.10.9",
+    "@backstage/plugin-permission-react": "^0.4.36",
     "@backstage/theme": "^0.6.7",
     "@mui/icons-material": "5.18.0",
     "@mui/material": "5.18.0",
     "@red-hat-developer-hub/backstage-plugin-theme": "^0.9.0",
-    "react-use": "^17.2.4"
+    "react-use": "^17.6.0"
   },
   "peerDependencies": {
     "react": "^16.13.1 || ^17.0.0 || ^18.0.0"
@@ -47,6 +49,7 @@
     "@backstage/cli": "^0.33.1",
     "@backstage/core-app-api": "^1.18.0",
     "@backstage/dev-utils": "^1.1.12",
+    "@backstage/plugin-permission-common": "^0.9.1",
     "@backstage/test-utils": "^1.7.10",
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^14.0.0",
