Add new translations workspace (#1450)
* chore(translations): create new workspace

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

* chore(translations): create new workspace app

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

* chore(translations): create new frontend plugin

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

* chore(translations): cleanup frontend plugin

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

* chore(translations): add rhdh theme

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

* chore(translations): create some translation experiments

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

* chore(translations): downgrade to backstage 1.39 to build an overlay image

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

* chore(translations): prepare release 0.0.1

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

* chore(translations): downgrade to backstage 1.39 to build an overlay image

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

* chore(translations): add codeowners

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

* update yarn.lock

* remove dockerfile from backend package

* chore(translations): add api report

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

* chore(translations): add playwright dependency and update config

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

* remove scaffolder plugins

* chore(translations): fix workspace name, remove mui 4 dependencies and align i18next version with backstage

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>

---------

Signed-off-by: Christoph Jerolimov <jerolimov+git@redhat.com>
Co-authored-by: Karthik <karthik.jk11@gmail.com>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -30,3 +30,4 @@
 /workspaces/sandbox                                 @lucifergene @rohitkrai03 @karthikjeeyar @xcoulon @alexeykazakov @mfrancisc @rsoaresd @jrosental @rajivnathan @MatousJobanek
 /workspaces/scorecard                               @redhat-developer/rhdh-plugins   @redhat-developer/rhdh-ui @christoph-jerolimov @its-mitesh-kumar @eswaraiahsapram
 /workspaces/theme                                   @redhat-developer/rhdh-ui @ciiay   @logonoff
+/workspaces/translations                            @redhat-developer/rhdh-ui @ciiay @debsmita1 @karthikjeeyar
