feat(mcp): Create mcp-integrations workspace (#1439)
* feat(mcp): Bootstrap mcp-integrations workspace

Signed-off-by: John Collier <jcollier@redhat.com>

* Run yarn install

Signed-off-by: John Collier <jcollier@redhat.com>

* Fix workspace imports

Signed-off-by: John Collier <jcollier@redhat.com>

* Fix yarn prettier:check

Signed-off-by: John Collier <jcollier@redhat.com>

---------

Signed-off-by: John Collier <jcollier@redhat.com>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -23,6 +23,7 @@
 /workspaces/homepage                                @redhat-developer/rhdh-ui @christoph-jerolimov @eswaraiahsapram
 /workspaces/lightspeed                              @redhat-developer/rhdh-ui @karthikjeeyar @rohitkrai03   @yangcao77
 /workspaces/marketplace                             @redhat-developer/rhdh-ui @christoph-jerolimov @karthikjeeyar
+/workspaces/mcp-integrations                        @johnmcollier @gabemontero @thepetk
 /workspaces/openshift-image-registry                @redhat-developer/rhdh-ui @divyanshiGupta @its-mitesh-kumar
 /workspaces/orchestrator                            @batzionb @mareklibra @gciavarrini
 /workspaces/quickstart                              @redhat-developer/rhdh-ui @divyanshiGupta @its-mitesh-kumar
