--- a/workspaces/quickstart/packages/app/package.json
+++ b/workspaces/quickstart/packages/app/package.json
@@ -48,7 +48,6 @@
     "@material-ui/icons": "^4.9.1",
     "@mui/icons-material": "5.18.0",
     "@mui/material": "5.18.0",
-    "@red-hat-developer-hub/backstage-plugin-global-header": "1.15.1",
     "@red-hat-developer-hub/backstage-plugin-quickstart": "workspace:^",
     "@red-hat-developer-hub/backstage-plugin-theme": "^0.9.0",
     "react": "^18.0.2",
@@ -59,6 +58,7 @@
   "devDependencies": {
     "@backstage/test-utils": "^1.7.10",
     "@playwright/test": "^1.32.3",
+    "@red-hat-developer-hub/backstage-plugin-global-header": "^1.17.1",
     "@testing-library/dom": "^9.0.0",
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^14.0.0",
