--- a/workspaces/orchestrator/plugins/orchestrator-backend/package.json
+++ b/workspaces/orchestrator/plugins/orchestrator-backend/package.json
@@ -70,6 +70,7 @@
     "@backstage/backend-plugin-api": "^1.3.1",
     "@backstage/backend-tasks": "^0.6.1",
     "@backstage/catalog-client": "^1.10.0",
+    "@backstage/core-plugin-api": "^1.10.7",
     "@backstage/errors": "^1.2.7",
     "@backstage/integration": "^1.17.0",
     "@backstage/plugin-catalog-node": "^1.17.0",
