--- a/workspaces/orchestrator/plugins/orchestrator-common/package.json
+++ b/workspaces/orchestrator/plugins/orchestrator-common/package.json
@@ -57,6 +57,7 @@
     "openapi:check": "./scripts/openapi.sh check"
   },
   "dependencies": {
+    "@backstage/core-plugin-api": "^1.10.7",
     "@backstage/plugin-permission-common": "^0.9.0",
     "@backstage/types": "^1.2.1",
     "@severlessworkflow/sdk-typescript": "^3.0.3",
