--- a/workspaces/marketplace/package.json
+++ b/workspaces/marketplace/package.json
@@ -50,7 +50,8 @@
     "minimatch": "3",
     "node-gyp": "^9.0.0",
     "prettier": "^3.4.2",
-    "typescript": "~5.3.0"
+    "typescript": "~5.3.0",
+    "yaml": "^2.8.1"
   },
   "resolutions": {
     "@types/react": "^18",
