--- a/workspaces/marketplace/plugins/marketplace-backend/package.json
+++ b/workspaces/marketplace/plugins/marketplace-backend/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@backstage/backend-defaults": "^0.11.1",
+    "@backstage/backend-dynamic-feature-service": "^0.7.3",
     "@backstage/backend-plugin-api": "^1.4.1",
     "@backstage/catalog-client": "^1.10.2",
     "@backstage/catalog-model": "^1.7.5",
@@ -44,7 +45,6 @@
     "@red-hat-developer-hub/backstage-plugin-marketplace-common": "workspace:^",
     "express": "^4.17.1",
     "express-promise-router": "^4.1.0",
-    "yaml": "^2.7.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -56,7 +56,8 @@
     "@types/express": "*",
     "@types/supertest": "^2.0.12",
     "msw": "^1.0.0",
-    "supertest": "^6.2.4"
+    "supertest": "^6.2.4",
+    "yaml": "^2.7.1"
   },
   "files": [
     "dist"
