--- a/workspaces/marketplace/plugins/marketplace/package.json
+++ b/workspaces/marketplace/plugins/marketplace/package.json
@@ -41,6 +41,7 @@
     "@backstage/plugin-permission-react": "^0.4.36",
     "@backstage/theme": "^0.6.7",
     "@backstage/types": "^1.2.1",
+    "@material-table/core": "^6.4.4",
     "@material-ui/core": "^4.12.2",
     "@monaco-editor/react": "^4.7.0",
     "@mui/icons-material": "^5.16.7",
